[package]
name = "random-nickname2"
authors = ["mzdk100 <mzdk100@foxmail.com>"]
description = "用于Rust的随机用户昵称生成器"
keywords = ["name", "user", "random", "gen", "nickname"]
license = "Apache-2.0"
readme = "README.md"
version = "0.1.8"
edition = "2024"
repository = "https://github.com/mzdk100/ramdom-nickname.git"

[dependencies]
rand = "0.9.1"